Fixed problem when port seller comments are overlapped and unable to read the comments (Ioana)
Workitems:
#17036 UI_Negotiation Screen- General and port seller comments are overlapped and unable to read the comments.
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C23012

--- a/ShipTech10/app/assets/global/plugins/bootstrap/css/bootstrap.css
+++ b/ShipTech10/app/assets/global/plugins/bootstrap/css/bootstrap.css
@@ -2035,7 +2035,6 @@ th {
   display: block;
   width: 100%;
   max-width: 100%;
-  overflow-x: auto;
   margin-bottom: 20px; }
   .table > thead > tr > th,
   .table > thead > tr > td,
